--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="">5.Vi Trung Kiên - B19DCVT195</a></li>
         </ul>
         <ul>
-            <li><a href="">6.Đỗ Ngọc Huấn - B19DCVT163</a></li>
+            <li><a href="./member/DoNgocHuan/index.html">6.Đỗ Ngọc Huấn - B19DCVT163</a></li>
         </ul>
         <ul>
             <li><a href="./member/minhntt1/index.html">7.Nguyễn Trần Tuấn Minh - B19DCVT255</a></li>
@@ -55,7 +55,7 @@
             <li><a href="">12.Lương Ngọc Huy - B19DCVT175</a></li>
         </ul>
         <ul>
-            <li><a href="">13.Vũ Khắc Phiêu - B19DCVT279</a></li>
+            <li><a href="./member/VuKhacPhieu/Index.html/">13.Vũ Khắc Phiêu - B19DCVT279</a></li>
         </ul>
         <ul>
             <li><a href="">14.Lê Thành Hưng - B19DCVT184</a></li>
