--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><a href="">12.Lương Ngọc Huy - B19DCVT175</a></li>
         </ul>
         <ul>
-            <li><a href="./member/VuKhacPhieu/Index.html/">13.Vũ Khắc Phiêu - B19DCVT279</a></li>
+            <li><a href="./member/VuKhacPhieu/Index.html">13.Vũ Khắc Phiêu - B19DCVT279</a></li>
         </ul>
         <ul>
             <li><a href="./member/Lê Thành Hưng/index.html">14.Lê Thành Hưng - B19DCVT184</a></li>
