--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <ul>
             <li><a href="./member/Phan Ngọc Khải/index.html">17.Phan Ngọc Khải - B19DCVT196</a></li>
         </ul>
+        <ul>
+            <li><a href="./member/TaNhatMinh/index.html">18.Tạ Nhật Minh - B19DCVT257</a></li>
+        </ul>
 
     </div>
     
