--- a/member/LuongNgocHuy/html/index.html
+++ b/member/LuongNgocHuy/html/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    
+    <header class='masthead'>
+        <p class='masthead-intro'>Hi I'm</p>
+        <h1 class='masthead-heading'>HUY!</h1>
+    </header>
+    <section class="introduction-section">
+        <h1>Introduction</h1>
+        <p>I am a alumnus, freelancer, and now i trying to be web developer.</p>
+        <p>I love the internet, technology, and building beautiful things.</p>
+    </section>
+    <section class="location-section">
+        <h1>Where I'm From</h1>
+        <p>I'm originally from Bac Quan, Viet Nam. </p>
+    </section>
+    <section class="questions-section">
+        <h1>More About Me</h1>
+        <h2>What are your favorite hobbies?</h2>
+        <p>My favorite hobby is playing football, math and building website on the internet.</p>
+        <h2>Where do you live?</h2>
+        <p>Now i living in Ha Noi city - capital city of Viet Nam.</p>
+        <h2>Why do you want to be a web developer?</h2>
+        <p>Because programming is awesome and programming for the internet is even more awesome.</p>
+    </section>
 </body>
 </html>
