Edit index file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <li><a href="./member/NguyenThienLam/index.html">11.Nguyễn Thiện Lâm - B19DCVT215</a></li>
                         </ul>
                         <ul>
-                            <li><a href="">12.Lương Ngọc Huy - B19DCVT175</a></li>
+                            <li><a href="./member/LuongNgocHuy/html/index.html">12.Lương Ngọc Huy - B19DCVT175</a></li>
                         </ul>
                         <ul>
                             <li><a href="./member/VuKhacPhieu/Index.html">13.Vũ Khắc Phiêu - B19DCVT279</a></li>
