--- a/member/ViTrungKien/index.html
+++ b/member/ViTrungKien/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My web</title>
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="BTLnhom3KTLT/member/ViTrungKien/style.css" />
   </head>
   <body>
     <!-- Add icon library -->
