--- a/member/ViTrungKien/index.html
+++ b/member/ViTrungKien/index.html
@@ -3,9 +3,59 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My web</title>
+    <title>ViTrungKien</title>
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+<!--     <link rel="stylesheet" href="/style.css" /> -->
+    <style> 
+      html{
+  font-family:"Verdana";
+}
+h1{
+  color: purple;
+  font-family: "Verdana";
+  text-align: center;
+}
+body {
+  background-color: lightblue;
+}
+
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 500px;
+  margin: auto;
+  text-align: left;
+  background-color: black;
+  margin: 40px 100px 60px 100px;
+  padding: 30px 10px 60px 30px;
+  color: white;
+  font-family: "Verdana";
+}
+  p {
+    text-align: left;
+  }
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+/*   font-size: 22px; */
+/*   color: blue; */
+  text-align: left;
+  
+}
+    </style>
   </head>
   <body>
     <!-- Add icon library -->
@@ -16,7 +66,7 @@
 
     <div class="card">
       <img
-        src="ains.jpg"
+        src="https://cdn.glitch.me/3916c91a-91e2-43a9-8816-f282e35edcdc%2Fains.jpg?v=1638276554175.jpg"
         alt="Vi Trung Kiên"
         style="width:100%"
       />
@@ -26,7 +76,7 @@
       <p>Chuyên ngành: Điện tử viễn thông</p>
       <p> Năm sinh: 2001</p>
       <p>Khóa: D19</p>
-      <p>University: Post and Telecommunications Institute of Technology (PTIT)</p>
+      <p>Trường: Post and Telecommunications Institute of Technology (PTIT)</p>
       <a href="#"><i class="fa fa-envelope-square"></i></a>
       <span>kienvt.b19vt195@stu.ptit.edu.vn</span> <br/>
       <a href="#"><i class="fa fa-facebook"></i></a>
