--- a/member/ViTrungKien/index.html
+++ b/member/ViTrungKien/index.html
@@ -62,7 +62,7 @@
       <p>Chuyên ngành: Điện tử viễn thông</p>
       <p> Năm sinh: 2001</p>
       <p>Khóa: D19</p>
-      <p>Trường: Post and Telecommunications Institute of Technology (PTIT)</p>
+      <p>Trường: Posts and Telecommunications Institute of Technology (PTIT)</p>
       <a href="#"><i class="fa fa-envelope-square"></i></a>
       <span>kienvt.b19vt195@stu.ptit.edu.vn</span> <br/>
       <a href="#"><i class="fa fa-facebook"></i></a>
