--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                         <ul>
                             <li><a href="./member/TaNhatMinh/index.html">18.Tạ Nhật Minh - B19DCVT257</a></li>
                         </ul>
+                        <ul>
+                            <li><a href="./member/DO HOANG SON/dohoangson.html">19.Đỗ Hoàng Sơn - B19DCVT308</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
